; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cgraph.c_cgraph_varpool_mark_needed_node.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cgraph.c_cgraph_varpool_mark_needed_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cgraph_varpool_node = type { i32, i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cgraph_varpool_mark_needed_node(%struct.cgraph_varpool_node* %0) #0 {
  %2 = alloca %struct.cgraph_varpool_node*, align 8
  store %struct.cgraph_varpool_node* %0, %struct.cgraph_varpool_node** %2, align 8
  %3 = load %struct.cgraph_varpool_node*, %struct.cgraph_varpool_node** %2, align 8
  %4 = getelementptr inbounds %struct.cgraph_varpool_node, %struct.cgraph_varpool_node* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %21, label %7

7:                                                ; preds = %1
  %8 = load %struct.cgraph_varpool_node*, %struct.cgraph_varpool_node** %2, align 8
  %9 = getelementptr inbounds %struct.cgraph_varpool_node, %struct.cgraph_varpool_node* %8, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %7
  %13 = load %struct.cgraph_varpool_node*, %struct.cgraph_varpool_node** %2, align 8
  %14 = getelementptr inbounds %struct.cgraph_varpool_node, %struct.cgraph_varpool_node* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @TREE_ASM_WRITTEN(i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %12
  %19 = load %struct.cgraph_varpool_node*, %struct.cgraph_varpool_node** %2, align 8
  %20 = call i32 @cgraph_varpool_enqueue_needed_node(%struct.cgraph_varpool_node* %19)
  br label %21

21:                                               ; preds = %18, %12, %7, %1
  %22 = load %struct.cgraph_varpool_node*, %struct.cgraph_varpool_node** %2, align 8
  %23 = getelementptr inbounds %struct.cgraph_varpool_node, %struct.cgraph_varpool_node* %22, i32 0, i32 0
  store i32 1, i32* %23, align 8
  ret void
}

declare dso_local i32 @TREE_ASM_WRITTEN(i32) #1

declare dso_local i32 @cgraph_varpool_enqueue_needed_node(%struct.cgraph_varpool_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
